--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,7 +4,7 @@
 
 
 <body>
-    <div id="wrapper">
+    <div id="wrapper" class="main-content">
         <%- include('../partials/header') %>
         <%- include('../partials/navigation') %>
 
