--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -76,7 +76,7 @@ nav ul li a {
 .button {
   display: inline-block;
   padding: 0.5rem 1rem;
-  background: #007BFF;
+  background: #032850;
   color: white;
   text-decoration: none;
   border-radius: 5px;
