done with week 4 assignment created the register form, login form, add new classification and an inventory form, client side and server side data validation/sanitization and session management, client side messages and also query statements to store all data in the database

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,5 +3,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %> | CSE 340 App</title>
+
+    <!-- Global Styles -->
     <link rel="stylesheet" href="/css/styles.css" media="screen">
+    <!-- Load login.css only for the login page -->
+    <% if (title === "Login" || title === "Register" || title === "Add new classification" || title === "Add new inventory") { %>
+        <link rel="stylesheet" href="/css/account.css" media="screen">
+    <% } %>
+    <script src="/js/script.js" defer ></script>
+    
+   
 </head>
