--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -235,6 +235,7 @@ footer {
 }
 
 
+
 #in-car-display {
   display: grid;
   gap: 1.5rem;
@@ -299,4 +300,20 @@ footer {
   .carDetail p {
       grid-column: span 1;
   }
+}
+
+.flash-message {
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+}
+
+.success {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.error {
+  background-color: #f44336;
+  color: white;
 }
