--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -6,7 +6,7 @@
 
 <!-- Display error message if any -->
 <% if (message) { %>
-    <p class="error"><%= message %></p>
+    <p class="error"><%= message() %></p>
 <% } %>
 
 <!-- Cars Section -->
