finally done with my week 5 assignment, its quite alot but done with every functionality Login/logout flows
Role-based access

Update and password forms

Test all server-side validation:

Email uniqueness

Password strength

--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -4,12 +4,12 @@
 
 
 <% if (messages && messages.success && messages.success.length) { %>
-    <div class="flash-message success"><%= messages.success %></div>
-  <% } %>
-  
-  <% if (messages && messages.error && messages.error.length) { %>
-    <div class="flash-message error"><%= messages.error %></div>
-  <% } %>
+  <div class="flash-message success"><%= messages.success %></div>
+<% } %>
+
+<% if (messages && messages.error && messages.error.length) { %>
+  <div class="flash-message error"><%= messages.error %></div>
+<% } %>
 
 <% if (errors) { %>
     <ul class="notice">
@@ -20,7 +20,7 @@
   <% } %>
 
 <div class="login-container">
-    <form action="" method="POST">
+    <form action="/account/login" method="POST">
         
         <label for="email">Email:</label>
         <input type="email" id="email" name="account_email" required>
