--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -18,3 +18,17 @@
   <li><a href="/inv/add-inventory">Add New Inventory</a></li>
 </ul>
 
+<h2>Manage Inventory</h2>
+<p>Select from the list of classifications</p>
+
+<table id="inventoryDisplay"></table>
+
+<label for="classificationList">Select a classification</label>
+<%- classificationSelect %>
+
+  
+
+<noscript>Javascript must be enabled to use this page.</noscript>
+
+
+<script src="../../js/inventory.js"></script>
