--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,16 @@
       <a href="/" title="Return to home page">CSE Motors</a>
     </span>
     <div id="tools">
-      <a title="Click to log in" href="/account/login">My Account</a><!-- be directed to the buildLogin controller so the controller that render the loginpage in the view account/login.ejs -->
+      <!-- If user is logged in, show their username and logout button -->
+      <% if (locals.user) { %>
+        <li>Hello, <%= locals.user.account_firstname %></li> <!-- Display the logged-in user's username -->
+        <li><a href="/account/logout">Logout</a></li> <!-- Link to logout -->
+      <% } else { %>
+        <!-- If not logged in, show login/signup links -->
+        <li><a href="/account/login">Login</a></li>
+        <li><a href="/account/register">Sign Up</a></li>
+      <% } %>
     </div>
 </header>
+
+
