--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %> | CSE 340 App</title>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XBPNK9N8BZ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XBPNK9N8BZ');
+    </script>
+
     <!-- Global Styles -->
     <link rel="stylesheet" href="/css/styles.css" media="screen">
     <!-- Load login.css only for the login page -->
